# bazel-proto-test

./: BUILD.bazel  WORKSPACE  echo.proto
