load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echo_go_proto",
    importpath = "example.com/repo/foo",
    proto = ":echo_proto",
    visibility = ["//visibility:public"],
)
